--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h1 {
 .paragraph-1{
     background: yellow;
     font-size: 10pt;
-    text-shadow: 1px 1px 2px black, 0 0 1em green;
+    text-shadow: 5px 5px 10px green;
 }
 .paragraph-2{
     color: purple;
@@ -20,16 +20,17 @@ h1 {
     margin-bottom: 60px;
     margin-left: 60px;
     margin-right: 60px;
-    text-shadow: 1px 1px 2px black, 0 0 1em green;
+    text-shadow: 5px 5px 10px green;
 }
 .paragraph-3{
     font-weight: bold;
     font-size: 16pt;
     font-family: Courier New;
-    text-shadow: 1px 1px 2px black, 0 0 1em green;
+    text-shadow: 5px 5px 10px green;
 }
 
 .paragraph-4{
     font-size: 24pt;
     font-style: italic;
+    text-shadow: 5px 5px 10px green;
 }
